--- a/public/modules/news/views/form.html
+++ b/public/modules/news/views/form.html
@@ -1,1 +1,53 @@
-<h1>{{news.action == "new" ? "Nueva" : "Editar"}} noticia</h1><ol class=breadcrumb><li><a href=#>Inicio</a></li><li><a href=#/content/news>Noticias</a></li><li class=active>{{news.action == "new" ? "Nueva" : "Editar"}}</li></ol><div ng-show=news.form.success><div class="alert alert-success" role=alert>Elemento {{news.action == "new" ? "creado" : "editado"}} correctamente.</div><a href=#/content/news class="btn btn-warning">Regresar</a></div><div ng-show=!news.form.success><form novalidate="" name=news.form class=form role=form ng-submit=news.submit()><div class=row><div class="form-group col-sm-8"><label for=inputEmail3 class=control-label>Titulo</label> <input name=title type=input class=form-control ng-model=news.data.title required=""><div class=error ng-show="news.form.title.$invalid && news.form.submitted"><small class=error ng-show=news.form.title.$error.required>Ingrese un titulo</small></div></div></div><div class=row><div class="form-group col-sm-10"><label for=inputEmail3 class=control-label>Contenido</label> <textarea ui-tinymce=news.tinymceOptions name=content class=form-control rows=6 ng-model=news.data.content required=""></textarea><div class=error ng-show="news.form.content.$invalid && news.form.submitted"><small class=error ng-show=news.form.content.$error.required>Ingrese el contenido</small></div></div></div><div class=row><div class="form-group col-xs-12"><button type=submit class="btn btn-primary">{{news.action == "new" ? "Enviar" : "Editar"}}</button> &nbsp; <a href=#/content/news class="btn btn-warning">Regresar</a></div></div></form></div>
+<h1>{{news.action == "new" ? "Nueva" : "Editar"}} noticia</h1>
+
+<ol class="breadcrumb">
+	<li><a href="#">Inicio</a></li>
+	<li><a href="#/content/news">Noticias</a></li>
+	<li class="active">{{news.action == "new" ? "Nueva" : "Editar"}}</li>
+</ol>
+
+<div ng-show="news.form.success">
+    <div class="alert alert-success" role="alert">Elemento {{news.action == "new" ? "creado" : "editado"}} correctamente.</div>
+    <a href="#/content/news" class="btn btn-warning">Regresar</a>
+</div>
+
+<div ng-show="!news.form.success">
+    <form novalidate name="news.form" class="form" role="form" ng-submit="news.submit()">
+
+    	<div class="row">
+    		<div class="form-group col-sm-8">
+    			<label for="inputEmail3" class="control-label">Titulo</label>
+    			<input name="title" type="input" class="form-control" ng-model="news.data.title" required>
+    		
+                <div class="error" ng-show="news.form.title.$invalid && news.form.submitted">
+                    <small class="error" ng-show="news.form.title.$error.required">
+                        Ingrese un titulo
+                    </small>
+                </div>
+
+            </div>
+
+    	</div>
+
+        <div class="row">
+            <div class="form-group col-sm-10">
+                <label for="inputEmail3" class="control-label">Contenido</label>
+                <textarea ui-tinymce="news.tinymceOptions" name="content" class="form-control" rows="6" ng-model="news.data.content" required></textarea>
+
+                <div class="error" ng-show="news.form.content.$invalid && news.form.submitted">
+                    <small class="error" ng-show="news.form.content.$error.required">
+                        Ingrese el contenido
+                    </small>
+                </div>
+            </div>
+        </div>
+
+    	<div class="row">
+    		<div class="form-group col-xs-12">
+    			<button type="submit" class="btn btn-primary">{{news.action == "new" ? "Enviar" : "Editar"}}</button>
+                &nbsp;
+    			<a href="#/content/news" class="btn btn-warning">Regresar</a>
+    		</div>
+    	</div>	
+    </form>
+</div>  
