--- a/public/modules/cooperative/views/social-form.html
+++ b/public/modules/cooperative/views/social-form.html
@@ -1,41 +1,1 @@
-
-<h1>Redes sociales</h1>
-
-<ol class="breadcrumb">
-    <li><a href="#/">Inicio</a></li>
-    <li class="active">Redes sociales</li>
-</ol>
-
-
-<div ng-show="social.form.success">
-    <div class="alert alert-success" role="alert">Elemento editado correctamente.</div>
-    <a href="#/" class="btn btn-warning">Regresar</a>
-</div>
-
-<div ng-show="!social.form.success">
-
-    <form novalidate name="social.form" class="form" role="form" ng-submit="social.submit()">
-
-        <div class="row">
-            <div class="form-group col-sm-8">
-                <label for="inputEmail3" class="control-label">Facebook</label>
-                <input name="title" type="input" class="form-control" ng-model="social.data.facebook" required>
-            </div>
-        </div>
-        
-        <div class="row">
-            <div class="form-group col-sm-8">
-                <label for="inputEmail3" class="control-label">Twitter</label>
-                <input name="title" type="input" class="form-control" ng-model="social.data.twitter" required>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="form-group col-xs-12">
-                <button type="submit" class="btn btn-primary">Guardar</button>
-                &nbsp;
-                <a href="#/" class="btn btn-warning">Regresar</a>
-            </div>
-        </div>  
-    </form>
-</div>  
+<h1>Redes sociales</h1><ol class=breadcrumb><li><a href="#/">Inicio</a></li><li class=active>Redes sociales</li></ol><div ng-show=social.form.success><div class="alert alert-success" role=alert>Elemento editado correctamente.</div><a href="#/" class="btn btn-warning">Regresar</a></div><div ng-show=!social.form.success><form novalidate="" name=social.form class=form role=form ng-submit=social.submit()><div class=row><div class="form-group col-sm-8"><label for=inputEmail3 class=control-label>Facebook</label> <input name=title type=input class=form-control ng-model=social.data.facebook required=""></div></div><div class=row><div class="form-group col-sm-8"><label for=inputEmail3 class=control-label>Twitter</label> <input name=title type=input class=form-control ng-model=social.data.twitter required=""></div></div><div class=row><div class="form-group col-xs-12"><button type=submit class="btn btn-primary">Guardar</button> &nbsp; <a href="#/" class="btn btn-warning">Regresar</a></div></div></form></div>
