--- a/public/modules/page/views/list.html
+++ b/public/modules/page/views/list.html
@@ -1,47 +1,1 @@
-<h1>Paginas</h1>
-
-<ol class="breadcrumb">
-	<li><a href="#">Inicio</a></li>
-	<li class="active">Paginas</li>
-</ol>
-
-<p class="pull-right">
-	<a href="#/content/page/new" class="btn btn-success">Nueva pagina</a>
-</p>
-<table class="table table-hover">
-	<thead>
-		<tr>
-			<th width="40%">Titulo</th>
-			<th>Fecha</th>
-			<th>Publicada</th>
-            <th></th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="page in pageList.list">
-            <td>{{page.title}}</td>
-			<td>{{page.add_date}}</td>
-			<td>{{page.published}}</td>
-            <td class="text-right">
-                <a href="#/content/page/edit/{{page.id}}" class="btn btn-primary btn-sm">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-
-                <button ng-click="pageList.delete(page.id, $event)" type="button" class="btn btn-danger btn-sm">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </button>
-            </td>
-		</tr>
-	</tbody>
-</table>
-
-<div class="text-center">
-    <pagination 
-    items-per-page="10" 
-    total-items="pageList.count" 
-    ng-model="pageList.page" 
-    max-size="5" 
-    class="pagination-lg" 
-    ng-change="pageList.setPage()">
-    </pagination>
-</div>
+<h1>Paginas</h1><ol class=breadcrumb><li><a href=#>Inicio</a></li><li class=active>Paginas</li></ol><p class=pull-right><a href=#/content/page/new class="btn btn-success">Nueva pagina</a></p><table class="table table-hover"><thead><tr><th width=40%>Titulo</th><th>Fecha</th><th>Publicada</th><th></th></tr></thead><tbody><tr ng-repeat="page in pageList.list"><td>{{page.title}}</td><td>{{page.add_date}}</td><td>{{page.published}}</td><td class=text-right><a href=#/content/page/edit/{{page.id}} class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-pencil"></span></a> <button ng-click="pageList.delete(page.id, $event)" type=button class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-remove"></span></button></td></tr></tbody></table><div class=text-center><pagination items-per-page=10 total-items=pageList.count ng-model=pageList.page max-size=5 class=pagination-lg ng-change=pageList.setPage()></pagination></div>
