--- a/public/modules/page/views/form.html
+++ b/public/modules/page/views/form.html
@@ -1,63 +1,1 @@
-<h1>{{page.action == "new" ? "Nueva" : "Editar"}} pagina</h1>
-
-<ol class="breadcrumb">
-	<li><a href="#">Inicio</a></li>
-	<li><a href="#/content/page">Paginas</a></li>
-	<li class="active">{{page.action == "new" ? "Nueva" : "Editar"}}</li>
-</ol>
-
-<div ng-show="page.form.success">
-    <div class="alert alert-success" role="alert">Elemento {{page.action == "new" ? "creado" : "editado"}} correctamente.</div>
-    <a href="#/content/page" class="btn btn-warning">Regresar</a>
-</div>
-
-<div ng-show="!page.form.success">
-    <form novalidate name="page.form" class="form" role="form" ng-submit="page.submit()">
-
-    	<div class="row">
-    		<div class="form-group col-sm-8">
-    			<label for="inputEmail3" class="control-label">Titulo</label>
-    			<input name="title" type="input" class="form-control" ng-model="page.data.title" required>
-    		
-                <div class="error" ng-show="page.form.title.$invalid && page.form.submitted">
-                    <small class="error" ng-show="page.form.title.$error.required">
-                        Ingrese un titulo
-                    </small>
-                </div>
-
-            </div>
-
-    	</div>
-
-        <div class="row">
-            <div class="form-group col-sm-10">
-                <label for="inputEmail3" class="control-label">Contenido</label>
-                <textarea ui-tinymce="page.tinymceOptions" ui-tinymce name="content" class="form-control" rows="6" ng-model="page.data.content" required></textarea>
-
-                <div class="error" ng-show="page.form.content.$invalid && page.form.submitted">
-                    <small class="error" ng-show="page.form.content.$error.required">
-                        Ingrese el contenido
-                    </small>
-                </div>
-            </div>
-        </div>
-
-    	<div class="row">
-            <div class="form-group col-sm-10">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" ng-model="page.data.published"> Publicar
-                    </label>
-                </div>
-            </div>
-    	</div>
-
-    	<div class="row">
-    		<div class="form-group col-xs-12">
-    			<button type="submit" class="btn btn-primary">{{page.action == "new" ? "Enviar" : "Editar"}}</button>
-                &nbsp;
-    			<a href="#/content/page" class="btn btn-warning">Regresar</a>
-    		</div>
-    	</div>	
-    </form>
-</div>  
+<h1>{{page.action == "new" ? "Nueva" : "Editar"}} pagina</h1><ol class=breadcrumb><li><a href=#>Inicio</a></li><li><a href=#/content/page>Paginas</a></li><li class=active>{{page.action == "new" ? "Nueva" : "Editar"}}</li></ol><div ng-show=page.form.success><div class="alert alert-success" role=alert>Elemento {{page.action == "new" ? "creado" : "editado"}} correctamente.</div><a href=#/content/page class="btn btn-warning">Regresar</a></div><div ng-show=!page.form.success><form novalidate="" name=page.form class=form role=form ng-submit=page.submit()><div class=row><div class="form-group col-sm-8"><label for=inputEmail3 class=control-label>Titulo</label> <input name=title type=input class=form-control ng-model=page.data.title required=""><div class=error ng-show="page.form.title.$invalid && page.form.submitted"><small class=error ng-show=page.form.title.$error.required>Ingrese un titulo</small></div></div></div><div class=row><div class="form-group col-sm-10"><label for=inputEmail3 class=control-label>Contenido</label> <textarea ui-tinymce=page.tinymceOptions name=content class=form-control rows=6 ng-model=page.data.content required=""></textarea><div class=error ng-show="page.form.content.$invalid && page.form.submitted"><small class=error ng-show=page.form.content.$error.required>Ingrese el contenido</small></div></div></div><div class=row><div class="form-group col-sm-10"><div class=checkbox><label><input type=checkbox ng-model=page.data.published> Publicar</label></div></div></div><div class=row><div class="form-group col-xs-12"><button type=submit class="btn btn-primary">{{page.action == "new" ? "Enviar" : "Editar"}}</button> &nbsp; <a href=#/content/page class="btn btn-warning">Regresar</a></div></div></form></div>
