--- a/dev/panel/modules/home/views/navbar.html
+++ b/dev/panel/modules/home/views/navbar.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#/"><img src="{{static}}img/logo.png"></a>
+        <a class="navbar-brand" href="#/"><img src="/static/panel/img/logo.png"></a>
     </div>
 
     <div class="collapse navbar-collapse">
