--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -18,12 +18,32 @@
 
             <div class="row">
                 <div class="form-group col-sm-8">
+                    <label for="inputEmail3" class="control-label">Imagen</label>
+                    <input name="title" type="file" ng-file="image" required>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-sm-8">
                     <label for="inputEmail3" class="control-label">Titulo</label>
                     <input name="title" type="input" class="form-control" ng-model="notification.data.title" required>
                 
                     <div class="error" ng-show="notification.form.title.$invalid && notification.form.submitted">
                         <small class="error" ng-show="notification.form.title.$error.required">
                             Ingrese un titulo
+                        </small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-sm-10">
+                    <label for="inputEmail3" class="control-label">Descripción</label>
+                    <textarea name="description" class="form-control" rows="3" ng-model="notification.data.description" required>{{notification.data.description}}</textarea>
+
+                    <div class="error" ng-show="notification.form.description.$invalid && notification.form.submitted">
+                        <small class="error" ng-show="notification.form.description.$error.required">
+                            Ingrese el contenido
                         </small>
                     </div>
                 </div>
@@ -92,13 +112,23 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="form-group col-sm-8">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" ng-model="notification.data.send_notification" value="1"> Enviar al celular
+                        </label>
+                    </div>
+                </div>
+            </div>
+
         	<div class="row">
         		<div class="form-group col-xs-12">
         			<button type="submit" class="btn btn-primary">{{notification.action == "new" ? "Enviar" : "Editar"}}</button>
                     &nbsp;
         			<a href="#/content/notification" class="btn btn-warning">Regresar</a>
         		</div>
-        	</div>	
+        	</div>
         </form>
     </div>  
 
