--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -1,4 +1,9 @@
 @import "mixin";
+@import "auth";
+@import "notification";
+@import "statistic";
+@import "update";
+
 
 body {
     padding-top: 50px;
