--- a/assets/modules/home/views/navbar.html
+++ b/assets/modules/home/views/navbar.html
@@ -33,6 +33,7 @@
             <li class="dropdown">
                 <a href="" data-toggle="dropdown">Cooperativa <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
+                    <li><a href="#/cooperative/groups">Grupos</a></li>
                     <li><a href="#/cooperative/email">Correos</a></li>
                     <li><a href="#/cooperative/social">Redes Sociales</a></li>
                     <li><a href="#/cooperative/update">Base de Datos</a></li>
