--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,7 +77,7 @@
   text-align: center;
   font: 20pt bold 'Vollkorn';
   color: #bbb;
-  margin: 20px 0;
+  margin: 0 0 20px 0;
 }
 .update-page .files {
   margin: 20px 0;
