--- a/assets/css/update.less
+++ b/assets/css/update.less
@@ -8,7 +8,7 @@
         text-align: center;
         font: 20pt bold 'Vollkorn';
         color: #bbb;
-        margin:20px 0;
+        margin:0 0 20px 0;
     }
 
     .files{
