--- a/assets/modules/update/views/index.html
+++ b/assets/modules/update/views/index.html
@@ -1,4 +1,61 @@
 <div class="update-page">
+
+
+    <div class="modal fade" id="upload-modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Actualización de {{update.current.name}}</h4>
+                </div>
+
+                <div class="modal-body">
+                    <div file-drop id="drag-zone" drop="update.addFile">
+                        Arrastre el csv de {{update.current.name}} aquí
+                    </div>
+                    <form ng-if="update.current.date">
+                        <div class="form-group">
+                            <label >Fecha de corte</label>
+                            <input type="text" class="form-control" placeholder="AAAA-MM-DD">
+                        </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary" ng-click="update.uploadFile()">Actualizar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal fade" id="download-modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Descarga de {{update.current.name}}</h4>
+                </div>
+
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label>Desde la fecha</label>
+                            <input type="text" class="form-control"  placeholder="AAAA-MM-DD">
+                        </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary">Descargar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <h1>Bases de datos</h1>
 
     <ol class="breadcrumb">
@@ -16,28 +73,89 @@
     </div>
 
     <div ng-show="!update.success">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>Archivo</th>
+                    <th>Última carga</th>
+                    <th>Última descarga</th>
+                    <th class="text-right">Acción</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="db in update.data.db">
+                    <td>{{db.name}}</td>
+                    <td>2015-02-02 12:30</td>
+                    <td>2015-02-02 12:30</td>
+                    <td class="text-right">
 
-        <h3>Tipo de actualización</h3>
-        <div ng-click="update.setType('simple')" type="button" class="btn btn-default" ng-class="{active: update.type == 'simple'}">Simple</div>
-        <div ng-click="update.setType('advanced')" type="button" class="btn btn-default" ng-class="{active: update.type == 'advanced'}">Avanzada</div>
+                        <button ng-click="update.onDBSelect(db)" data-toggle="modal" data-target="#upload-modal" type="button" class="btn btn-primary btn-sm">
+                            <span class="glyphicon glyphicon-arrow-up"></span>
+                        </button>
 
-        <div file-drop id="drag-zone" drop="update.addFile">
+                        <button ng-click="update.onDBSelect(db)" data-toggle="modal" data-target="#download-modal" type="button" class="btn btn-warning btn-sm">
+                            <span class="glyphicon glyphicon-arrow-down"></span>
+                        </button>
 
-            Arrastre los archivos csv aqui
+                    </td>
+                </tr>
+ 
+            </tbody>
+        </table>
 
-        </div>
-
-        <div class="files">
-            <h3>Archivos</h3>
+<!--         <form>
             <div class="row">
-                <div class="col-sm-6" ng-repeat="(k, v) in update.files[update.type]">
-                    <i ng-class="{success: v != false}" class="glyphicon glyphicon-ok-circle"></i> {{k}}
+                <div class="form-group col-sm-6">
+                    <h3>Que información desea revisar?</h3>
+                    <select class="form-control">
+                        <option value="0">Asocidos</option>
+                        <option value="0">Familiares</option>
+                        <option value="0">Creditos</option>
+                        <option value="0">Obligaciones</option>
+                        <option value="0">Extracto</option>
+                    </select>
                 </div>
             </div>
+            <div class="row">
+                <div class="form-group col-sm-6">
+                    <label>Fecha de corte</label>
+                    <select class="form-control">
+                        <option value="0">Asocidos</option>
+                        <option value="0">Familiares</option>
+                        <option value="0">Creditos</option>
+                        <option value="0">Obligaciones</option>
+                        <option value="0">Extracto</option>
+                    </select>
+                </div>
+            </div>
+        </form> -->
+<!-- 
+        <div class="row">
+            <div class="col-sm-3">
+                Archivo:
+            </div>
+            <div class="col-sm-3">
+                DB_asociados.csv
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                Ultima actialización:
+            </div>
+            <div class="col-sm-3">
+                20/10/2014 20:30
+            </div>
+        </div> -->
+<!-- 
+        <div file-drop id="drag-zone" drop="update.addFile">
+            Arrastre el csv de asociados aqui
         </div>
 
-        <button ng-class="{disabled : update.show.send == false}" type="submit" class="btn btn-primary" ng-click="update.sendFiles()">Enviar</button>
-        <a href="#/" class="btn btn-warning">Regresar</a>
+
+
+        <button ng-class="{disabled : update.show.send == false}" type="submit" class="btn btn-primary" ng-click="update.sendFiles()">Subir CSV</button>
+        <button type="submit" class="btn btn-info" ng-click="update.sendFiles()">Descargar CSV</button>
+        <a href="#/" class="btn btn-warning">Regresar</a> -->
 
     </div>
 </div>
