new database uploader and pages modle

--- a/assets/modules/home/views/navbar.html
+++ b/assets/modules/home/views/navbar.html
@@ -37,7 +37,7 @@
                     <li><a href="#/cooperative/email">Correos</a></li>
                     <li><a href="#/cooperative/social">Redes Sociales</a></li>
                     <li><a href="#/cooperative/update">Base de Datos</a></li>
-                    <li><a href="#/cooperative/statistic">Estadisticas</a></li>
+                    <!-- <li><a href="#/cooperative/statistic">Estadisticas</a></li> -->
                 </ul>
             </li>
 
