--- a/assets/modules/update/views/index.html
+++ b/assets/modules/update/views/index.html
@@ -13,7 +13,7 @@
                     <div file-drop id="drag-zone" drop="update.addFile">
                         Arrastre el csv de {{update.current.name}} aquí
                     </div>
-                    <form ng-if="update.current.date">
+                    <form>
                         <div class="form-group">
                             <label >Fecha de corte</label>
                             <input type="text" class="form-control" placeholder="AAAA-MM-DD">
@@ -30,7 +30,7 @@
     </div>
 
 
-    <div class="modal fade" id="download-modal" tabindex="-1" role="dialog">
+<!--     <div class="modal fade" id="download-modal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-
+ -->
 
     <h1>Bases de datos</h1>
 
