--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -19,3 +19,17 @@ body {
         height:30px;
     }
 }
+.loading{
+    text-align: center;
+    margin:60px 0;
+    
+    img{
+        width:40px;
+        height:40px;
+        margin:auto;
+    }
+
+    h4{
+        font-weight: normal;
+    }
+}
