--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,13 @@
-.form-signin {
-  max-width: 240px;
+.login-page {
+  width: 260px;
   margin: auto;
+}
+.login-page h3 {
+  margin: 40px auto 20px;
+  font-weight: normal;
+}
+.login-page .form-signin {
+  margin: 25px auto;
 }
 #notification-page .autocomplete {
   border: 1px #CCC solid;
@@ -79,6 +86,9 @@
   color: #bbb;
   margin: 0 0 20px 0;
 }
+.update-page #drag-zone.isSelected {
+  background: #fcf8e3;
+}
 .update-page .files {
   margin: 20px 0;
   overflow: hidden;
@@ -104,4 +114,16 @@ body {
 }
 .navbar-brand img {
   height: 30px;
+}
+.loading {
+  text-align: center;
+  margin: 60px 0;
+}
+.loading img {
+  width: 40px;
+  height: 40px;
+  margin: auto;
+}
+.loading h4 {
+  font-weight: normal;
 }
