--- a/assets/css/update.less
+++ b/assets/css/update.less
@@ -9,6 +9,10 @@
         font: 20pt bold 'Vollkorn';
         color: #bbb;
         margin:0 0 20px 0;
+
+        &.isSelected{
+            background:#fcf8e3;
+        }
     }
 
     .files{
