--- a/assets/modules/auth/views/login.html
+++ b/assets/modules/auth/views/login.html
@@ -1,21 +1,36 @@
 
 
-<form ng-show="login.form" class="form-signin" role="form" ng-submit="login.login()">
+<div class="text-center login-page">
 
-    <div class="form-group">
-        <input ng-model="login.username" type="text" class="form-control" placeholder="Cedula" required="" autofocus="">
+    <img src="{{login.static}}/img/logo.png">
+    
+    <h3>Bienvenido asociado</h3>
+
+    <div ng-show="login.error" class="alert alert-danger" role="alert">
+        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+        <span class="sr-only">Error:</span>
+        Usuario o password incorrectos
     </div>
 
-    <div class="form-group">
-        <input ng-model="login.password" type="password" class="form-control" placeholder="Contraseña" required="">
+    <div ng-hide="login.form" class="loading">
+        <img src="{{login.static}}/img/loader.gif">
     </div>
 
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+    <form ng-show="login.form" class="form-signin" role="form" ng-submit="login.login()">
+        <div class="form-group">
+            <input ng-model="login.username" type="text" class="form-control" placeholder="Cedula" required="" autofocus="">
+        </div>
+        <div class="form-group">
+            <input ng-model="login.password" type="password" class="form-control" placeholder="Contraseña" required="">
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+    </form>
 
-</form>
+</div>
 
+<!-- 
 <ul ng-show="login.coop" class="form-signin">
     <li ng-repeat="coop in login.coopList">
         <button type="button" name="" class="btn btn-lg btn-primary" ng-click="login.selectCoop(coop.cooperative.id, coop.role.id)">{{coop.cooperative.name}}</button>
     </li>
-</ul>
+</ul> -->
