--- a/assets/modules/home/views/navbar.html
+++ b/assets/modules/home/views/navbar.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#/"><img src="https://s3-us-west-2.amazonaws.com/asociados-client/public/img/logo.png"></a>
+        <a class="navbar-brand" href="#/"><img src="{{static}}/img/logo.png"></a>
     </div>
 
     <div class="collapse navbar-collapse">
@@ -18,7 +18,6 @@
                 <a href=""  data-toggle="dropdown">Solicitudes<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="#/request/credit">Créditos</a></li>
-                    <li><a href="#/request/user">Actualización de Datos</a></li>
                 </ul>
             </li>
 
