--- a/assets/modules/update/views/index.html
+++ b/assets/modules/update/views/index.html
@@ -1,60 +1,71 @@
 <div class="update-page">
 
 
-    <div class="modal fade" id="upload-modal" tabindex="-1" role="dialog">
+    <div class="modal fade" id="data-modal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Actualización de {{update.current.name}}</h4>
+                    <h4 class="modal-title" id="myModalLabel">{{update.modalType === 1 ? "Actualización" : "Descargar"}} de {{update.current.name}}</h4>
                 </div>
 
-                <div class="modal-body">
-                    <div file-drop id="drag-zone" drop="update.addFile">
-                        Arrastre el csv de {{update.current.name}} aquí
+
+                <div ng-show="update.loading" class="loading">
+                    <img src="{{login.static}}/img/loader.gif">
+
+                    <h4>Cargando..</h4>
+                </div>
+
+                <div ng-hide="update.loading">
+                    <div ng-show="update.success">
+                        <div class="modal-body">
+                            <div class="alert alert-success" role="alert">La actualizacion del archivo de {{update.current.name}} entró en cola, le enviaremos un correo cuando este lista</div>
+                        </div>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                        </div>
                     </div>
-                    <form>
-                        <div class="form-group">
-                            <label >Fecha de corte</label>
-                            <input type="text" class="form-control" placeholder="AAAA-MM-DD">
+
+                    <div ng-hide="update.success">
+                        <div class="modal-body">
+                            <div ng-class="{isSelected: update.file}"  ng-show="update.modalType == 1" file-drop id="drag-zone" drop="update.addFile">
+                                <div ng-if="!update.file">Arrastre el csv de {{update.current.name}} aquí</div>
+                                <div ng-if="update.file">{{update.file.name}}</div>
+                            </div>
+                            <form>
+                                <div class="form-group">
+                                    <label >Delimitado por </label>
+                                    <select class="form-control" ng-model="update.data.separator">
+                                        <option value=";">Punto y coma (;)</option>
+                                        <option value="|">Pipeline (|)</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label >{{update.modalType === 1 ? "Fecha de corte" : "Desde la fecha"}} </label>
+                                    <input type="date" class="form-control" placeholder="AAAA-MM-DD" ng-model="update.data.date">
+                                </div>
+                            </form>
+
+                            <div ng-show="update.error">
+                                <div class="alert alert-danger" role="alert">{{ update.error }}.</div>
+                            </div>
+
                         </div>
-                    </form>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                            <button ng-show="update.modalType == 1" type="button" class="btn btn-primary" ng-click="update.uploadFile()">Actualizar</button>
+                            <button ng-show="update.modalType == 2" type="button" class="btn btn-primary" ng-click="update.downloadFile()">Descargar</button>
+                        </div>
+                    </div>
+                
                 </div>
 
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary" ng-click="update.uploadFile()">Actualizar</button>
-                </div>
             </div>
         </div>
     </div>
 
-
-<!--     <div class="modal fade" id="download-modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Descarga de {{update.current.name}}</h4>
-                </div>
-
-                <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <label>Desde la fecha</label>
-                            <input type="text" class="form-control"  placeholder="AAAA-MM-DD">
-                        </div>
-                    </form>
-                </div>
-
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary">Descargar</button>
-                </div>
-            </div>
-        </div>
-    </div>
- -->
 
     <h1>Bases de datos</h1>
 
@@ -63,16 +74,7 @@
         <li class="active">Bases de datos</li>
     </ol>
 
-    <div ng-show="update.success">
-        <div class="alert alert-success" role="alert">La actualizacion entró en cola, le enviaremos un correo cuando este lista</div>
-        <a href="#/" class="btn btn-warning">Regresar</a>
-    </div>
-
-    <div ng-show="update.error">
-        <div class="alert alert-danger" role="alert">{{ update.error }}.</div>
-    </div>
-
-    <div ng-show="!update.success">
+    <div>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
@@ -89,11 +91,11 @@
                     <td>2015-02-02 12:30</td>
                     <td class="text-right">
 
-                        <button ng-click="update.onDBSelect(db)" data-toggle="modal" data-target="#upload-modal" type="button" class="btn btn-primary btn-sm">
+                        <button ng-click="update.onDBSelect(db, 1)" data-toggle="modal" data-target="#data-modal" type="button" class="btn btn-primary btn-sm">
                             <span class="glyphicon glyphicon-arrow-up"></span>
                         </button>
 
-                        <button ng-click="update.onDBSelect(db)" data-toggle="modal" data-target="#download-modal" type="button" class="btn btn-warning btn-sm">
+                        <button ng-click="update.onDBSelect(db, 2)" data-toggle="modal" data-target="#data-modal" type="button" class="btn btn-warning btn-sm">
                             <span class="glyphicon glyphicon-arrow-down"></span>
                         </button>
 
@@ -101,61 +103,8 @@
                 </tr>
  
             </tbody>
+
         </table>
-
-<!--         <form>
-            <div class="row">
-                <div class="form-group col-sm-6">
-                    <h3>Que información desea revisar?</h3>
-                    <select class="form-control">
-                        <option value="0">Asocidos</option>
-                        <option value="0">Familiares</option>
-                        <option value="0">Creditos</option>
-                        <option value="0">Obligaciones</option>
-                        <option value="0">Extracto</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-sm-6">
-                    <label>Fecha de corte</label>
-                    <select class="form-control">
-                        <option value="0">Asocidos</option>
-                        <option value="0">Familiares</option>
-                        <option value="0">Creditos</option>
-                        <option value="0">Obligaciones</option>
-                        <option value="0">Extracto</option>
-                    </select>
-                </div>
-            </div>
-        </form> -->
-<!-- 
-        <div class="row">
-            <div class="col-sm-3">
-                Archivo:
-            </div>
-            <div class="col-sm-3">
-                DB_asociados.csv
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-3">
-                Ultima actialización:
-            </div>
-            <div class="col-sm-3">
-                20/10/2014 20:30
-            </div>
-        </div> -->
-<!-- 
-        <div file-drop id="drag-zone" drop="update.addFile">
-            Arrastre el csv de asociados aqui
-        </div>
-
-
-
-        <button ng-class="{disabled : update.show.send == false}" type="submit" class="btn btn-primary" ng-click="update.sendFiles()">Subir CSV</button>
-        <button type="submit" class="btn btn-info" ng-click="update.sendFiles()">Descargar CSV</button>
-        <a href="#/" class="btn btn-warning">Regresar</a> -->
 
     </div>
 </div>
