--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="form-group col-sm-8">
                     <label for="inputEmail3" class="control-label">Imagen</label>
-                    <input name="title" type="file" ng-file="image" required>
+                    <input name="image" type="file" ng-file="image" required>
                 </div>
             </div>
 
