--- a/assets/modules/credit/views/view.html
+++ b/assets/modules/credit/views/view.html
@@ -9,17 +9,17 @@
 
 <dl class="dl-horizontal">
     <dt>Credito</dt>
-    <dd>{{creditView.data.credit.name}}</dd>
+    <dd>{{creditView.credit.name}}</dd>
 
     <dt>Asociado</dt>
-    <dd>{{creditView.data.user}}</dd>
+    <dd>{{creditView.user}}</dd>
 
     <dt>Monto</dt>
-    <dd>{{creditView.data.amount}}</dd>
+    <dd>{{creditView.amount}}</dd>
 
     <dt>Cantidad de meses</dt>
-    <dd>{{creditView.data.months}}</dd>
+    <dd>{{creditView.months}}</dd>
 
     <dt>Fecha de envio</dt>
-    <dd>{{creditView.data.add_date}}</dd>
+    <dd>{{creditView.add_date}}</dd>
 </dl>
