fix erro credit

--- a/assets/modules/credit/views/view.html
+++ b/assets/modules/credit/views/view.html
@@ -2,7 +2,7 @@
 
 <ol class="breadcrumb">
     <li><a href="#">Inicio</a></li>
-    <li><a href="#/request/credit">Creditos</a></li>
+    <li><a href="#/request/credit">Creditos {{creditView}}</a></li>
     <li class="active">Detalle</li>
 </ol>
 
