Fix error credit view

--- a/assets/modules/credit/views/list.html
+++ b/assets/modules/credit/views/list.html
@@ -8,7 +8,7 @@
 <table class="table table-hover">
     <thead>
         <tr>
-            <th>Asociado</th>
+            <th>Asociados</th>
             <th>Credito</th>
             <th>Monto</th>
             <th>Fecha</th>
