--- a/assets/modules/credit/views/view.html
+++ b/assets/modules/credit/views/view.html
@@ -2,24 +2,24 @@
 
 <ol class="breadcrumb">
     <li><a href="#">Inicio</a></li>
-    <li><a href="#/request/credit">Creditos {{creditView}}</a></li>
+    <li><a href="#/request/credit">Creditos</a></li>
     <li class="active">Detalle</li>
 </ol>
 
 
 <dl class="dl-horizontal">
     <dt>Credito</dt>
-    <dd>{{creditView.credit.name}}</dd>
+    <dd>{{creditView.data.credit.name}}</dd>
 
-    <dt>Asociado</dt>
-    <dd>{{creditView.user}}</dd>
+    <dt>Asociados</dt>
+    <dd>{{creditView.data.user}}</dd>
 
     <dt>Monto</dt>
-    <dd>{{creditView.amount}}</dd>
+    <dd>{{creditView.data.amount}}</dd>
 
-    <dt>Cantidad de meses</dt>
-    <dd>{{creditView.months}}</dd>
+    <dt>Cantidad de mesess</dt>
+    <dd>{{creditView.data.months}}</dd>
 
     <dt>Fecha de envio</dt>
-    <dd>{{creditView.add_date}}</dd>
+    <dd>{{creditView.data.add_date}}</dd>
 </dl>
