--- a/assets/modules/update/views/index.html
+++ b/assets/modules/update/views/index.html
@@ -36,7 +36,7 @@
                             <form>
                                 <div class="form-group">
                                     <label >Delimitado por </label>
-                                    <select class="form-control" ng-model="update.data.separator">
+                                    <select class="form-control" ng-model="update.data.delimiter">
                                         <option value=";">Punto y coma (;)</option>
                                         <option value="|">Pipeline (|)</option>
                                     </select>
