Fix height editor pages

--- a/assets/modules/page/views/form.html
+++ b/assets/modules/page/views/form.html
@@ -55,7 +55,7 @@
         <div class="row" ng-show="page.data.type == 2">
             <div class="form-group col-sm-10">
                 <label for="inputEmail3" class="control-label">Contenido</label>
-                <textarea ui-tinymce="page.tinymceOptions" name="content" class="form-control" rows="6" ng-model="page.data.content"></textarea>
+                <textarea ui-tinymce="page.tinymceOptions" name="content" class="form-control tinymce-editor" rows="6" ng-model="page.data.content"></textarea>
             </div>
         </div>
 
