--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="form-group col-sm-10">
                     <label for="inputEmail3" class="control-label">Contenido</label>
-                    <textarea ui-tinymce="notification.tinymceOptions" name="content" class="form-control tinymce-editor" rows="6" ng-model="notification.data.content" required>{{notification.data.content}}</textarea>
+                    <textarea ui-tinymce="notification.tinymceOptions" name="content" class="form-control" rows="6" ng-model="notification.data.content" required>{{notification.data.content}}</textarea>
 
                     <div class="error" ng-show="notification.form.content.$invalid && notification.form.submitted">
                         <small class="error" ng-show="notification.form.content.$error.required">
