--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -22,10 +22,10 @@
             <td>{{notificaion.title}}</td>
 			<td>{{notificaion.add_date}}</td>
             <td class="text-right">
-          <!--       <a href="#/content/notification/edit/{{notificaion.id}}" class="btn btn-primary btn-sm">
+                <a href="#/content/notification/edit/{{notificaion.id}}" class="btn btn-primary btn-sm">
                     <span class="glyphicon glyphicon-pencil"></span>
                 </a>
- -->
+
                 <button ng-click="notificationList.delete(notificaion.id, $event)" type="button" class="btn btn-danger btn-sm">
                     <span class="glyphicon glyphicon-remove"></span>
                 </button>
@@ -36,7 +36,7 @@
 
 <div class="text-center">
     <pagination 
-    items-per-page="10" 
+    items-per-page="20" 
     total-items="notificationList.count" 
     ng-model="notificationList.page" 
     max-size="5" 
