--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -18,9 +18,9 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="notificaion in notificationList.list">
+		<tr ng-repeat="notificaion in notificationList.list | orderBy:'-add_date'">
             <td>{{notificaion.title}}</td>
-			<td>{{notificaion.add_date}}</td>
+			<td>{{notificaion.add_date | date:'dd/MM/yyyy HH:mm:ss'}}</td>
             <td class="text-right">
                 <a href="#/content/notification/edit/{{notificaion.id}}" class="btn btn-primary btn-sm">
                     <span class="glyphicon glyphicon-pencil"></span>
