--- a/assets/modules/groups/views/list.html
+++ b/assets/modules/groups/views/list.html
@@ -22,11 +22,11 @@
             <td>{{group.name}}</td>
 			<td>{{group.date}}</td>
             <td class="text-right">
-                <a href="/#/cooperative/groups/fill/{{group.id}}" class="btn btn-info btn-sm">
+                <a href="#/cooperative/groups/fill/{{group.id}}" class="btn btn-info btn-sm">
                     <span class="glyphicon glyphicon-cloud-upload"></span>
                 </a>
 
-                <a href="/#/cooperative/groups/edit/{{group.id}}" class="btn btn-primary btn-sm">
+                <a href="#/cooperative/groups/edit/{{group.id}}" class="btn btn-primary btn-sm">
                     <span class="glyphicon glyphicon-pencil"></span>
                 </a>
 
