--- a/assets/modules/groups/views/fill.html
+++ b/assets/modules/groups/views/fill.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="form-group col-sm-8">
                 <label for="inputEmail3" class="control-label">Cargr nuevo CSV de cedulas</label>
-                <input name="name" type="file" file-model='file'>
+                <input name="name" type="file" accept=".csv" file-model='file'>
             </div>
         </div>
 
