--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,7 +27,7 @@
   min-width: 100px;
 }
 #notification-page .autocomplete li:hover {
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 }
 #notification-page .user-list {
   margin: 0px;
@@ -46,16 +46,16 @@
   float: right;
 }
 #statistic-page .red {
-  color: #E3515E;
+  color: #e3515e;
 }
 #statistic-page .blue {
-  color: #35B6E0;
+  color: #35b6e0;
 }
 #statistic-page .green {
-  color: #57AD43;
+  color: #57ad43;
 }
 #statistic-page .orange {
-  color: #F7B547;
+  color: #f7b547;
 }
 #statistic-page .data-general {
   list-style: none;
@@ -126,4 +126,53 @@ body {
 }
 .loading h4 {
   font-weight: normal;
+}
+.loading-panel {
+  height: 0px;
+  position: fixed;
+  padding: 0;
+  margin: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background: rgba(255, 255, 255, 0.8);
+}
+.loading-panel-loader {
+  opacity: 0;
+  margin-top: 20px;
+  text-align: center;
+  font-size: 30px;
+  transition: margin-top 0.2s linear, opacity 0.2s linear;
+}
+.loading-panel-loader .glyphicon {
+  margin-top: 10px;
+  color: #5FB340;
+}
+.loading-panel.display {
+  height: 100%;
+}
+.loading-panel.display .loading-panel-loader {
+  margin-top: 100px;
+  opacity: 0.7;
+}
+.glyphicon-refresh-animate {
+  -animation: spin .7s infinite linear;
+  -webkit-animation: spin2 .7s infinite linear;
+}
+@-webkit-keyframes spin2 {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  from {
+    transform: scale(1) rotate(0deg);
+  }
+  to {
+    transform: scale(1) rotate(360deg);
+  }
 }
