--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -33,3 +33,51 @@ body {
         font-weight: normal;
     }
 }
+
+.loading-panel{
+    height:0px;
+    position:fixed;
+    padding:0;
+    margin:0;
+    top:0;
+    left:0;
+    width: 100%;
+    z-index:1000;
+    background:rgba(255,255,255,0.8);
+
+    &-loader{
+        opacity:0;
+        margin-top:20px;
+        text-align:center;
+        font-size:30px;
+        transition:margin-top 0.2s linear, opacity 0.2s linear;
+
+        .glyphicon{
+            margin-top:10px;
+            color:#5FB340;
+        }
+    }
+
+    &.display{
+        height:100%;
+        .loading-panel-loader{
+            margin-top:100px;
+            opacity: 0.7;
+        }
+    }
+}
+
+.glyphicon-refresh-animate {
+    -animation: spin .7s infinite linear;
+    -webkit-animation: spin2 .7s infinite linear;
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg);}
+    to { transform: scale(1) rotate(360deg);}
+}
