--- a/assets/modules/common/views/loading.html
+++ b/assets/modules/common/views/loading.html
@@ -2,7 +2,7 @@
     
     <div class="loading-panel-loader">
 
-        <div>Cargando</div>
+        <!-- <div>Cargando</div> -->
 
         <div class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></div>
 
