Add title in pages and Groups

--- a/assets/modules/groups/views/form.html
+++ b/assets/modules/groups/views/form.html
@@ -12,6 +12,7 @@
 </div>
 
 <div ng-show="!group.form.success">
+    <h3>{{group.data.name}}</h3>
     <form novalidate name="group.form" class="form" role="form" ng-submit="group.submit()">
 
         <div class="row">
