--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -14,6 +14,7 @@
 		<tr>
 			<th width="40%">Titulo</th>
 			<th>Fecha</th>
+            <th>Tipo</th>
             <th></th>
 		</tr>
 	</thead>
@@ -21,6 +22,7 @@
 		<tr ng-repeat="notificaion in notificationList.list | orderBy:'-add_date'">
             <td>{{notificaion.title}}</td>
 			<td>{{notificaion.add_date | date:'dd/MM/yyyy HH:mm:ss'}}</td>
+            <td > <span ng-if="notificaion.public">Publica</span> <span ng-if="!notificaion.public">Privada</span></td>
             <td class="text-right">
                 <a href="#/content/notification/edit/{{notificaion.id}}" class="btn btn-primary btn-sm">
                     <span class="glyphicon glyphicon-pencil"></span>
