Add message interceptor

--- a/assets/modules/home/views/modal.html
+++ b/assets/modules/home/views/modal.html
@@ -6,7 +6,9 @@
                 <h4 class="modal-title" id="myModalLabel">{{title}}</h4>
             </div>
 
-            <div class="modal-body">{{content}}</div>
+            <div class="modal-body">
+                <p>{{content}}</p>
+            </div>
         </div>
     </div>
 </div>
